# python_jwt_example_fastapi

./: .deepsource.toml  .gitignore  Dockerfile  README.md  cli.py  config_example.yaml  docker-compose.yml  pyproject.toml  requirements.txt
service1/: __init__.py
service1/helpers/: helpers.py
service1/models/: auth.py  common.py
service1/routes/: auth.py  main.py
service1/service/: mail.py  user.py
